src/objects/LAB_Mo_Tester_4__c.object
<CustomObject>
    <fields>
        <fullName>MT4_Checkbox_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MT4 Checkbox 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT4_Phone_1__c</fullName>
        <label>MT4 Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MT4_Picklist_1__c</fullName>
        <label>MT4 Picklist 1</label>
        <picklist>
            <picklistValues>
                <fullName>MT4 P1 One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT4 P2 Two</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT4 P3 Three</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT4 P4 Four</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MT4_Text_1__c</fullName>
        <label>MT4 Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mo Tester 4</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mo Tester 4 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mo Tester 4s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>